tests/transpiler/x/cobol/string_contains.cob
>>SOURCE FORMAT FREE
IDENTIFICATION DIVISION.
PROGRAM-ID. MAIN.

DATA DIVISION.
WORKING-STORAGE SECTION.
01 S PIC X(5) VALUE "catch".

PROCEDURE DIVISION.
    IF FUNCTION POSITION("cat", S) > 0 THEN
        DISPLAY "true"
    ELSE
        DISPLAY "false"
    END-IF
    IF FUNCTION POSITION("dog", S) > 0 THEN
        DISPLAY "true"
    ELSE
        DISPLAY "false"
    END-IF
    STOP RUN.
